# sdl2048

./: .gitignore  CMakeLists.txt  Readme.md
src/: gameLifecycle.c  gameLifecycle.h  lifecycle.c  lifecycle.h  logic.c  logic.h  main.c  render.c  render.h
